Fixed buffer overflow bug etc

--- a/webpage/style.css
+++ b/webpage/style.css
@@ -78,7 +78,24 @@ h3 {
 
 #viewer {
     display: none;
+    font-family: sans-serif;
+    border-top: 1px solid #d3d3d3;
+    padding-top: 1%;
+}
+
+#viewer h3 {
+    color: purple;
+    font-weight: 100;
+}
+
+#viewer #url {
+    color: black;
+    font-weight: 100;
+}
+
+#content {
     border: 1px solid #d3d3d3;
+    margin: 1%;
 }
 
 
